<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/activityName"
        android:text="@string/activityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/moduleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moduleName"
        android:textSize="20sp"
        android:layout_below="@+id/activityName"
        android:gravity="center"  />

    <TextView
        android:id="@+id/start_time"
        android:text="@string/activityStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/moduleName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/end_time"
        android:text="@string/activityEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_alignTop="@+id/start_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nbPlaces"
        android:id="@+id/places"
        android:layout_above="@+id/salle"
        android:gravity="center" />

    <TextView
        android:id="@+id/salle"
        android:text="@string/salle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="30sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/intervenant"
        android:text="@string/intervenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/salle"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/validerToken"
        android:gravity="center"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/intervenant"
        android:layout_alignRight="@+id/desinscrire"
        android:layout_alignEnd="@+id/desinscrire" />

    <EditText
        android:id="@+id/editTextToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="8"
        android:layout_below="@+id/textViewToken"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/inscrire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/inscriptionButton"
        android:onClick="Subscribe_onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/desinscrire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/desinscriptionButton"
        android:onClick="Unsubscribe_onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="Valider"
        android:id="@+id/validateToken"
        android:layout_below="@+id/editTextToken"
        android:onClick="Validate_onClick"
        android:layout_centerHorizontal="true" />

</RelativeLayout>