<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_epitech"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextLog"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center" />
    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewPWD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextPass"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center" />
    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextLogButton"
        android:id="@+id/log_button"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:textSize="20sp"
        android:onClick="log_button_OnClick" />

</LinearLayout>
