<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rinko.myepidroid.PlanningView">

    <TextView
        android:id="@+id/textView"
        android:text="@string/planning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/buttonPrev"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        android:layout_below="@+id/textView"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="PrevDay_OnClick" />

    <Button
        android:id="@+id/buttonNext"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@+id/textView"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="NextDay_OnClick" />

    <ListView
        android:id="@+id/PlanningList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNext"
        >

    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/Day"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_above="@+id/PlanningList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
